--- a/DHCP/dhcpd.conf
+++ b/DHCP/dhcpd.conf
@@ -8,11 +8,9 @@
 #
 
 # option definitions common to all supported networks...
-option domain-name "example.org";
-option domain-name-servers ns1.example.org, ns2.example.org;
+#option domain-name "example.org";
+#option domain-name-servers ns1.example.org, ns2.example.org;
 
-default-lease-time 600;
-max-lease-time 7200;
 
 # The ddns-updates-style parameter controls whether or not the server will
 # attempt to do a DNS update when a lease is confirmed. We default to the
@@ -50,7 +48,10 @@ ddns-update-style none;
 #  option routers rtr-239-32-1.example.org;
 #}
 
-# A slightly different configuration for an internal subnet.
+# Intranet settings
+default-lease-time 600;
+max-lease-time 7200;
+
 subnet 10.0.0.0 netmask 255.255.255.0 {
  range 10.0.0.100 10.0.0.125;
  option domain-name-servers 10.0.0.250;
